--- a/tasks/central.yml
+++ b/tasks/central.yml
@@ -1,30 +1,34 @@
 ---
 
-apiVersion: platform.stackrox.io/v1alpha1
-kind: Central
-metadata:
-  name: stackrox-central-services
-  namespace: stackrox
-spec:
-  central:
-    exposure:
-      loadBalancer:
-        enabled: false
-        port: 443
-      nodePort:
-        enabled: false
-      route:
-        enabled: true
-    persistence:
-      persistentVolumeClaim:
-        claimName: stackrox-db
-  egress:
-    connectivityPolicy: Online
-  scanner:
-    analyzer:
-      scaling:
-        autoScaling: Enabled
-        maxReplicas: 5
-        minReplicas: 2
-        replicas: 3
-    scannerComponent: Enabled
+- name: Create RHACS Central
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: platform.stackrox.io/v1alpha1
+      kind: Central
+      metadata:
+        name: stackrox-central-services
+        namespace: stackrox
+      spec:
+        central:
+          exposure:
+            loadBalancer:
+              enabled: false
+              port: 443
+            nodePort:
+              enabled: false
+            route:
+              enabled: true
+          persistence:
+            persistentVolumeClaim:
+              claimName: stackrox-db
+        egress:
+          connectivityPolicy: Online
+        scanner:
+          analyzer:
+            scaling:
+              autoScaling: Enabled
+              maxReplicas: 5
+              minReplicas: 2
+              replicas: 3
+          scannerComponent: Enabled
