--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,3 +8,6 @@
 
 - import_tasks: secured-cluster.yml
   when: secured_cluster | bool
+  
+- import_tasks: delete_secured_cluster.yml
+  when: delete_secured_cluster | bool
