--- a/tasks/rhacs-operator.yml
+++ b/tasks/rhacs-operator.yml
@@ -33,6 +33,7 @@
       kind: Subscription
       metadata:
         name: rhacs-operator
+        namespace: rhacs-operator
       spec:
         channel: latest
         installPlanApproval: Automatic
