--- a/tasks/secured-cluster.yml
+++ b/tasks/secured-cluster.yml
@@ -23,13 +23,14 @@
   shell: "oc get secret central-htpasswd -n stackrox -o jsonpath='{ .data.password }' | base64 -d"
   register: central_password
 
-- name: Generate ROX_API_Token
+- name: Generate ROX_API_TOKEN
   shell: curl -sk -u "admin:{{ central_password.stdout }}" "https://{{ central_url.stdout }}/v1/apitokens/generate" -d '{"name":"token name", "role":"Admin"}' | jq -r ".token"
   register: rox_api_token
 
 - name: Add ROX_API_TOKEN for roxctl authentication to bashrc
   lineinfile:
     path: ~/.bashrc
+    regexp: '^export ROX_API_TOKEN='
     line: 'export ROX_API_TOKEN={{ rox_api_token.stdout }}'
 
 - name: Source bashrc
