--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,5 +9,8 @@
 - import_tasks: secured-cluster.yml
   when: secured_cluster | bool
   
+- import_tasks: roxctl.yml
+  when: roxctl | bool
+  
 - import_tasks: delete_secured_cluster.yml
   when: delete_secured_cluster | bool
