--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,6 @@ roxctl: yes
 # Option to specify which version of RHACS to install.  Commented out in rhacs-operator.yml
 rhacs_version:
 
-delete_secured_cluster: no
+uninstall: no
 
 cluster_name: my-cluster
